--- a/resources/database/batch.properties
+++ b/resources/database/batch.properties
@@ -1,8 +1,7 @@
 #### DB properties for BATCH ####
-## oracle 11g driver [required ojdbc6.jar] ##
-batch.jdbc.driver=oracle.jdbc.OracleDriver
-batch.jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:xe
-batch.jdbc.user=project
-batch.jdbc.password=project
+batch.jdbc.driver=com.mysql.jdbc.Driver
+batch.jdbc.url=jdbc:mysql://localhost:3306/employees
+batch.jdbc.user=root
+batch.jdbc.password=root
 
-batch.schema.script=classpath:/org/springframework/batch/core/schema-oracle10g.sql
+batch.schema.script=classpath:/org/springframework/batch/core/schema-mysql.sql
