--- a/resources/database/batch.properties
+++ b/resources/database/batch.properties
@@ -1,7 +1,16 @@
 #### DB properties for BATCH ####
-batch.jdbc.driver=com.mysql.jdbc.Driver
-batch.jdbc.url=jdbc:mysql://localhost:3306/employees
-batch.jdbc.user=root
-batch.jdbc.password=root
+# for oracle
+batch.jdbc.driver=oracle.jdbc.OracleDriver
+batch.jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:xe
+batch.jdbc.user=project
+batch.jdbc.password=project
 
-batch.schema.script=classpath:/org/springframework/batch/core/schema-mysql.sql
+batch.schema.script=classpath:/org/springframework/batch/core/schema-oracle10g.sql
+
+# for mysql
+#batch.jdbc.driver=com.mysql.jdbc.Driver
+#batch.jdbc.url=jdbc:mysql://localhost:3306/{databaseName}
+#batch.jdbc.user=userName
+#batch.jdbc.password=password
+#
+#batch.schema.script=classpath:/org/springframework/batch/core/schema-mysql.sql
